<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nihui.health.MainActivity">

    <!--标题-->
    <include layout="@layout/index_title_bar" />
    <!--中间内容布局-->

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>
    <!--底部导航栏-->

    <RadioGroup
        android:id="@+id/rg_main"
        android:background="#11000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <RadioButton
            style="@style/RadioButtonStyle"
            android:id="@+id/index_button_id"
            android:text="@string/index_button_content" />
        <RadioButton
            style="@style/RadioButtonStyle"
            android:id="@+id/health_button_id"
            android:text="@string/health_button_content"
            />
        <RadioButton
            style="@style/RadioButtonStyle"
            android:id="@+id/friend_button_id"
            android:text="@string/friend_button_content"
             />
        <RadioButton
            style="@style/RadioButtonStyle"
            android:id="@+id/me_button_id"
            android:text="@string/me_button_content"
            />
    </RadioGroup>
</LinearLayout>
