<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!--顶部标题栏-->
    <include layout="@layout/launcher_top_title" />

    <!--中间显示内容区域-->
    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/user_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/input_user_and_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_show"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_launcher_round" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_launcher_round" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_user_and_password"
            android:text="@string/login_text" />

    </RelativeLayout>

    <!--底部内容提示区域-->
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/only_show"
            android:text="@string/froget_username_and_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toRightOf="@id/only_show"
            android:layout_marginLeft="50dp"
            android:id="@+id/logn_btn"
            android:text="@string/logn_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>




</LinearLayout>